<resources>
    <string name="app_name">GerenceApp</string>
    <string name="hintLoginEmail">Email</string>
    <string name="hintLoginPassword">Senha</string>
    <string name="keepMeConnected">Mantenha-me Conectado</string>
    <string name="loginButton">Continuar</string>
    <string name="ProjectsListActivity">Projetos</string>
    <string name="createNewAccount">Criar nova conta</string>
    <string name="title_activity_project_main">ProjectMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="metrics">Métrica</string>
    <string name="pipeline">Pipeline</string>
    <string name="guide">Guia</string>
    <string name="message">Mensagem</string>
</resources>
