<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/transitions_container"
    tools:context="com.example.adriel.gerenceapp.MainActivity"
    tools:ignore="UseCompoundDrawables"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_weight="1"
        tools:ignore="InefficientWeight">

        <ImageView
            android:id="@+id/imageViewID"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="16dp"
            android:elevation="2dp"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/uni"
            tools:ignore="ContentDescription" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutLoginNameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/EditText.Login"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/nameLoginTextFieldID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:theme="@style/EditText.Login"
                android:hint="@string/hintLoginEmail"
                android:inputType="textEmailAddress"
                tools:ignore="HardcodedText,LabelFor" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPasswordNameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/EditText.Login"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/passwordLoginTextFieldID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:elevation="2dp"
                android:theme="@style/EditText.Login"
                android:hint="@string/hintLoginPassword"
                android:inputType="textPassword"
                tools:ignore="HardcodedText,LabelFor,RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Switch
            android:layout_marginTop="16dp"
            android:id="@+id/keepMeConnectedID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keepMeConnected"
            android:textColor="@color/colorPrimaryText"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/createNewAccountID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/createNewAccount"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <Button
        android:id="@+id/loginButtonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="4dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        tools:ignore="HardcodedText,InefficientWeight" />

</LinearLayout>
